# webpack-rust-tailwind-template

./: .gitignore  Cargo.toml  index.js  package.json  shell.nix  webpack.config.js
src/: lib.rs
