[package]
name = "webpack-rust-tailwind-template"
version = "0.1.0"
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
console_error_panic_hook = "0.1"
console_log = "0.1"
log = "0.4"
wasm-bindgen = "0.2"
web-sys.version = "0.3"

web-sys.features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
]


[dev-dependencies]
wasm-bindgen-test = "0.2"


[profile.release]
lto = true
opt-level = "z"
panic = "abort"
